# saip-proyect

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  reset_db.sh  saip.sql
B/: Dockerfile  database.py  docker-compose.yml  main.py  pyproject.toml  reporte.xlsx
B/alembic/: env.py
B/alembic/versions/: 00dc7268423b_create_users_table.py  01f782c6156b_rename_update_at_to_updated_at_in_roles.py  0293e096605f_rename_create_date_to_created_at_in_.py  05abcdbf6e10_create_table_sesessions.py  29ffa0401aa1_initial_migration.py  2bd716eed439_delete.py  351115c260de_add_role_modules_table.py  3d4131aa3b0c_add_updated_by_to_users.py  4b696d4e984d_roles_delete.py  765979b99700_add_tables_recipes_module.py  8590367a8bb5_create_table_roles.py  9454cc7dacee_add_modules_and_role_modules_tables.py  94dbe7b35f5d_add_soft_delete_fields_to_users.py  b10efca3554e_add_columns_users.py  c07d36d3d8f0_initial_migration_clean.py  c1c21037a648_sessions_add_session_id_and_token.py  d7c5a0f5c3e5_add_audit_fields_to_roles.py  e4ca54d70f58_add_modules_and_role_modules_tables.py  fe1534ddc01c_remove_role_modules_table.py
B/app/: main.py
B/src/: dependencies.py  email.py  main.py  models.py  security.py
B/src/models/: models.py
B/src/routers/: auth.py  providers.py  reports.py  role_modules.py  roles.py  session.py  supply_categories.py  users.py
B/src/schemas/: schemas.py
F/: Dockerfile  docker-compose.yml  index.html  package.json  pnpm-lock.yaml
_docs/: RF001.md  RF006.md  RF011_Ver_receta_individual.md  RF012_Descontar_Materias_Primas.md  (+1 more)
backend/: alembic.ini  (+3 more)
(+246 files in other folders)
