[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.129.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]
